--- a/cell01/ex05/tab.html
+++ b/cell01/ex05/tab.html
@@ -1,20 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <style>
+    table {
+      width: 100%;
+      height: 100px;
+      border-collapse: collapse; 
+    }
+    td {
+      width: 50%;
+      border: 1px solid black;   
+    }
+  </style>
 </head>
-
 <body>
-    <table  border="1"  width="100%" height="100"  >
-        <tbody >
-            <tr >
-            <td bgcolor="pink" width="50%">First</td>
-            <td bgcolor="powderblue" width="50%">Second</td>
-            </tr>
-        </tbody>
-    </table>
-    
+  <table>
+    <tbody>
+      <tr>
+        <td bgcolor="pink">First</td>
+        <td bgcolor="powderblue">Second</td>
+      </tr>
+    </tbody>
+  </table>
 </body>
 </html>
