--- a/cell02/ex00/responsive.html
+++ b/cell02/ex00/responsive.html
@@ -4,12 +4,14 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Responsive</title>
-  </head>
+  <!-- เชื่อมกับไฟล์ CSS -->
+  <link rel="stylesheet" href="responsive.css">
+</head>
 <body>
   <table>
     <tr>
-      <td style="background:pink;">First</td>
-      <td style="background:powderblue;">Second</td>
+      <td class="first">First</td>
+      <td class="second">Second</td>
     </tr>
   </table>
 </body>
